--- a/_data/services.yml
+++ b/_data/services.yml
@@ -1,32 +1,60 @@
 ---
-SMB:
-  label: SMB
-  description: You've found the SMB service open  and need to know what you can do with it.
+API_Key:
+  label: API Key
+  description: You have an API key and need to know what you can do with it.
 
-WMI:
-  label: WMI
-  description: You've found the Windows Management Intstrumentation (WMI) service open and need to know what you can do with it.
+Prompt:
+  label: Prompt
+  description: You have a prompt and need to know how to improve or optimize it.
 
-DCOM:
-  label: DCOM
-  description: You've found the DCOM service open and need to know what you can do with it.
+Model_Checkpoint:
+  label: Model Checkpoint
+  description: You have a model checkpoint and need to know how to load or fine-tune it.
 
-Kerberos:
-  label: Kerberos
-  description: You've found the kerberos service open and need to know what you can do with it.
+Tokens:
+  label: Tokens
+  description: You need to manage token usage and understand their limitations.
 
-RPC:
-  label: RPC
-  description: You've found the RPC service open and need to know what you can do with it.
+Dataset:
+  label: Dataset
+  description: You have a dataset and need to know how to preprocess or use it for training.
 
-LDAP:
-  label: LDAP
-  description: You've found the LDAP service open and need to know what you can do with it.
+Response:
+  label: Response
+  description: You have a model's response and want to analyze or refine it.
 
-NTLM:
-  label: NTLM
-  description: Command relates to the NTLM protocol.
+Logs:
+  label: Logs
+  description: You have logs from a model interaction and need to debug or analyze them.
 
-DNS:
-  label: DNS
-  description: Command relates to the DNS service.
+Embedding:
+  label: Embedding
+  description: You have embeddings and need to know how to use or compare them.
+
+Latency_Issue:
+  label: Latency Issue
+  description: You are facing slow responses and need to optimize the model's performance.
+
+Bias:
+  label: Bias
+  description: You have biased outputs and need to know how to mitigate them.
+
+Adversarial_Prompt:
+  label: Adversarial Prompt
+  description: You suspect malicious prompts and need to secure the model.
+
+Cost_Usage:
+  label: Cost Usage
+  description: You want to monitor or reduce the cost of using LLM APIs.
+
+Server_Config:
+  label: Server Config
+  description: You have a server configuration and need to deploy the model securely.
+
+Inference_Script:
+  label: Inference Script
+  description: You have an inference script and need to optimize or scale it.
+
+Monitoring:
+  label: Monitoring
+  description: You want to track and log the model's performance and interactions.
